<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufjf.dcc196.dcc196sqlintro.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarRegistros"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnCriaTabela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cria_tabela"
        android:layout_marginEnd="6dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btnExcluiTabela"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="6dp" />

    <Button
        android:id="@+id/btnExcluiTabela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclui_tabela"
        android:layout_marginStart="7dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/btnCriaTabela"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnInsereRegistro"
        android:layout_marginLeft="7dp" />

    <Button
        android:id="@+id/btnInsereRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insere_registro"
        android:layout_marginStart="4dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluiTabela"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnListarRegistros"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/btnListarRegistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar_registros"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="@+id/btnExcluirRegistros"
        app:layout_constraintTop_toBottomOf="@+id/btnInsereRegistro"
        android:layout_marginRight="3dp" />

    <Button
        android:id="@+id/btnExcluirRegistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir_registros"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btnListarRegistros"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnAtualizarRegistros"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btnAtualizarRegistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_registros"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirRegistros"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
